# Alse

Gui_control/: Gui_control.pro  control.cpp  control.h  control.ui
Proyecto_Cmake/: CMakeLists.txt  control.cpp  control.h  leds.cpp  leds.h  main.cpp  register.cpp
diaz_ochoa/Lab8/: prueba.cpp
diaz_ochoa/Lab8/polinomios/: CMakeLists.txt  Polinomio.cpp  Polinomio.h  Termino.cpp  Termino.h  main.cpp
diaz_ochoa_qt_polinomios/polinomios/: Polinomio.cpp  Polinomio.h  main.cpp
diaz_ochoa_qt_polinomios/qt_polinomios/: division.cpp  division.h  division.ui  main.cpp  polinomios.cpp  polinomios.h  polinomios.ui  polinomios_dlg.ui  qt_polinomios.pro
proyecto_final/: Leds_App.mdj
proyecto_final/Documentation/: Database_ER_diagram.mdj  Doxyfile  Leds_App_Cmake.mdj  Leds_App_PRO.mdj
proyecto_final/Leds_App/: Leds_App.pro  Sign_In.ui  control.cpp  control.h  control.ui  control_leds.cpp  control_leds.h  control_leds.ui  database.cpp  database.h  leds.cpp  leds.h  leds.ui  leds_control.ui  main.cpp  register.cpp  register.h  register.ui  sign_in.cpp  sign_in.h  sign_in.ui
proyecto_final/Leds_Cmake/: CMakeLists.txt  control.cpp  control.h  db_local.cpp  db_local.h  leds.cpp  leds.h  leds.ui  main.cpp  register.cpp  register.h  register.ui  ui_control.h  ui_leds.h  ui_register.h
proyecto_final/data_base/: CMakeLists.txt  create_db.cpp  insert_db.cpp  select_db.cpp  sensor.db  test.db  user.db
